# circles-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: .pull-request.yaml  publish.yml
crates/abis/: Cargo.toml  README.md
crates/abis/src/: lib.rs
crates/abis/src/base_group/: base_group.json  base_group.rs  mod.rs
crates/abis/src/base_group_factory/: base_group_factory.json  base_group_factory.rs  mod.rs
crates/abis/src/demurrage_circles/: demurrage_circles.json  demurrage_circles.rs  mod.rs
crates/abis/src/hub_v2/: hub_v2.json  hub_v2.rs  mod.rs
crates/abis/src/inflationary_circles/: inflationary_circles.json  inflationary_circles.rs  mod.rs
crates/abis/src/invitation_escrow/: invitation_escrow.json  invitation_escrow.rs  mod.rs
crates/abis/src/invitation_farm/: invitation_farm.json  invitation_farm.rs  mod.rs
crates/abis/src/lift_erc20/: lift_erc20.json  lift_erc20.rs  mod.rs
crates/abis/src/name_registry/: mod.rs  name_registry.json  name_registry.rs
crates/abis/src/referrals_module/: mod.rs  referrals_module.json  referrals_module.rs
crates/examples/: Cargo.toml
crates/pathfinder/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/pathfinder/examples/: contract_integration.rs  find_path.rs  path_and_events.rs
crates/pathfinder/src/: contract.rs  convenience.rs  flow.rs  hub.rs  lib.rs  packing.rs  path.rs  rpc.rs
crates/pathfinder/tests/: flow_matrix_tests.rs  integration_tests.rs  packing_tests.rs  path_wrapper_tests.rs  rpc_tests.rs
crates/pathfinder/tests/common/: mod.rs  path_helpers.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: lib.rs
crates/profiles/tests/: profile_service.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/examples/: paged_and_ws.rs
crates/rpc/src/: client.rs  error.rs  lib.rs  paged_query.rs  rpc.rs  utils.rs
crates/rpc/src/events/: mod.rs  parser.rs  subscription.rs
crates/rpc/src/methods/: avatar.rs  balance.rs  events.rs  group.rs  health.rs  invitation.rs  mod.rs  network.rs  pathfinder.rs  query.rs  sdk.rs  search.rs  tables.rs  token.rs  token_info.rs  transaction.rs  trust.rs
crates/rpc/tests/: common_trust_decode.rs  events_http_decode.rs  events_parse.rs  profile_decode.rs  query_decode.rs  token_decode.rs  token_holder_decode.rs  token_methods_normalized.rs  trust_decode.rs
crates/rpc/tests/fixtures/: circles_events.json  circles_events_http.json  circles_query_batch.json  circles_query_response.json  common_trust.json  profile_batch.json  token_balances.json  token_holders.json  trust_relations.json
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: README.md  basic_read.rs  invite_generate.rs  ws_subscribe.rs
crates/sdk/src/: cid_v0_to_digest.rs  config.rs  core.rs  lib.rs  runner.rs  ws.rs
crates/sdk/src/avatar/: base_group.rs  common.rs  human.rs  mod.rs  organisation.rs
crates/sdk/src/services/: data.rs  invitations.rs  invite_farm.rs  mod.rs  referrals.rs  registration.rs  tokens.rs
crates/sdk/tests/: common.rs  live_pathfind.rs  live_read.rs  pathfind_transfer.rs  registration_invites.rs
crates/transfers/: Cargo.toml  README.md
crates/transfers/src/: builder.rs  error.rs  lib.rs
crates/transfers/tests/: replenish_builder_tests.rs  transfer_builder_tests.rs
crates/types/: CHANGELOG.md  Cargo.toml  README.md
crates/types/src/: avatar.rs  base.rs  client.rs  config.rs  contracts.rs  errors.rs  events.rs  group.rs  lib.rs  network.rs  pathfinding.rs  query.rs  rpc.rs  runner.rs  token.rs  trust.rs  wrapper.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: converter.rs
docs/: parity-validation.md
docs/plans/: README.md  ts-sdk-parity-non-web.md
fixtures/ts-sdk/: README.md  converter-demurrage-inflation.json
fixtures/ts-sdk/scripts/: generate-converter-fixture.mjs
scripts/: publish-crates.sh
