[workspace]
resolver = "2"
members = ["crates/types", "crates/pathfinder"]

[workspace.dependencies]
# Shared dependencies across all crates
alloy-primitives = { version = "1.0.9", default-features = false, features = [
    "serde",
] }
circles-types = { path = "crates/types", version = "0.2.1" }
reqwest = { version = "0.12.19", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
