[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/pathfinder",
    "crates/abis",
    "crates/rpc",
    "crates/sdk",
    "crates/profiles",
    "crates/utils",
    "crates/transfers",
]

[workspace.dependencies]
# Shared dependencies across all crates
alloy-contract = "1.1.2"
alloy-json-rpc = "1.1.2"
alloy-provider = { version = "1.1.2", features = ["reqwest"] }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "serde",
] }
alloy-sol-types = { version = "1.4.1", features = ["json"] }
async-trait = "0.1.89"
circles-types = { path = "crates/types", version = "0.3.0" }
futures = "0.3"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.47.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
