[package]
name = "circles-abis"
version = "0.1.0"
edition = "2024"
description = "Circles contract ABIs and bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-abis"

[dependencies]
alloy-contract = { workspace = true }
alloy-sol-types = { workspace = true }
