[package]
name = "circles-pathfinder"
version = "0.5.0"
edition = "2024"
authors = ["franco <0xpantera@proton.me>"]
description = "Pathfinding and flow matrix calculation for the Circles protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
keywords = ["circles", "pathfinding", "gnosis", "defi"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }                                          # Address, U256
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }                     # sol! macro
circles-types = { workspace = true }
circles-rpc = { path = "../rpc" }
circles-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[features]
default = []
ws = ["circles-rpc/ws"]
