[package]
name = "circles-profiles"
version = "0.1.0"
edition = "2024"
description = "Circles profile service client"
license = "MIT OR Apache-2.0"

[dependencies]
circles-types = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
