[package]
name = "circles-profiles"
version = "0.1.0"
edition = "2024"
description = "Circles profile service client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-profiles"

[dependencies]
circles-types = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
