[package]
name = "circles-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-json-rpc = "1.1.2"
alloy-primitives = { workspace = true }
alloy-provider = { version = "1.1.2", features = ["reqwest"] }
alloy-transport-http = "1.1.2"
alloy-transport-ws = { version = "1.1.2", optional = true }
circles-types = { workspace = true }
futures = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = ["ws"]
ws = ["dep:alloy-transport-ws", "alloy-provider/pubsub", "alloy-provider/ws"]
