[package]
name = "circles-rpc"
version = "0.1.0"
edition = "2024"
description = "Circles JSON-RPC client (HTTP + WS)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-rpc"

[dependencies]
alloy-json-rpc = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport-http = "1.1.2"
alloy-transport-ws = { version = "1.1.2", optional = true }
circles-types = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[features]
default = ["ws"]
ws = ["dep:alloy-transport-ws", "alloy-provider/pubsub", "alloy-provider/ws"]
