[package]
name = "circles-sdk"
version = "0.1.0"
edition = "2024"
description = "Circles SDK orchestrating RPC, profiles, pathfinding, transfers, and contract runners."
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
circles-profiles = { path = "../profiles" }
circles-rpc = { path = "../rpc" }
circles-types = { workspace = true }
circles-transfers = { path = "../transfers" }
abis = { path = "../abis" }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
bs58 = "0.5"
serde_json = { workspace = true }
rand = "0.8"
hex = "0.4"
futures = { workspace = true, optional = true }
alloy-json-rpc = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
once_cell = "1.19"

[features]
default = []
ws = ["circles-rpc/ws", "futures", "alloy-json-rpc", "tokio", "tracing"]

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
