[package]
name = "circles-sdk"
version = "0.1.1"
edition = "2024"
description = "Circles SDK orchestrating RPC, profiles, pathfinding, transfers, and contract runners."
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-sdk"

[dependencies]
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
circles-profiles = { workspace = true }
circles-rpc = { workspace = true }
circles-types = { workspace = true }
circles-transfers = { workspace = true }
circles-abis = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, optional = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-signer-local = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
k256 = { workspace = true }
bs58 = "0.5"
serde_json = { workspace = true }
hex = "0.4"
safe-rs = { workspace = true }
futures = { workspace = true, optional = true }
alloy-json-rpc = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
once_cell = "1.19"

[features]
default = []
ws = ["circles-rpc/ws", "futures", "alloy-json-rpc", "tokio", "tracing"]

[dev-dependencies]
alloy-node-bindings = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
