[package]
name = "circles-transfers"
version = "0.1.0"
edition = "2021"
description = "Transfer transaction builder for Circles protocol"
authors = ["franco <0xpantera@proton.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-transfers"

[dependencies]
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-sol-types = { workspace = true }
abis = { path = "../abis" }
circles-rpc = { path = "../rpc" }
circles-pathfinder = { path = "../pathfinder" }
circles-types = { workspace = true }
circles-utils = { path = "../utils" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true }
bytes = "1.6"

[features]
default = []
ws = ["circles-rpc/ws"]
