[package]
name = "circles-types"
version = "0.2.1"
edition = "2021"
description = "Core type definitions for the Circles protocol"
repository = "https://github.com/deluXtreme/circles-rs"
license = "MIT"
keywords = ["circles", "types", "gnosis", "defi"]

[dependencies]
alloy-json-abi = "1.4.1"
alloy-primitives = { workspace = true }
alloy-provider = "1.1.2"
alloy-rpc-types = "1.1.2"
async-trait = "0.1.89"
serde = { workspace = true }
serde_json = "1.0.145"
