[package]
name = "circles-types"
version = "0.3.0"
edition = "2021"
description = "Core type definitions for the Circles protocol"
repository = "https://github.com/deluXtreme/circles-rs"
license = "MIT"
keywords = ["circles", "types", "gnosis", "defi"]

[dependencies]
alloy-json-abi = "1.4.1"
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = "1.1.2"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
