[package]
name = "circles-types"
version = "0.3.1"
edition = "2021"
description = "Core type definitions for the Circles protocol"
repository = "https://github.com/deluXtreme/circles-rs"
license = "MIT"
keywords = ["circles", "types", "gnosis", "defi"]
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-types"

[dependencies]
alloy-json-abi = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
