[package]
name = "circles-utils"
version = "0.1.0"
edition = "2024"
description = "Shared Circles utilities (demurrage/inflation conversions, helpers)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/deluXtreme/circles-rs"
homepage = "https://circles-rs-book.vercel.app/"
documentation = "https://docs.rs/circles-utils"

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
num-bigint = "0.4"
num-traits = "0.2"
